# mcpsh

./: .coverage  .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  example_config.json  example_server.py  example_stateful_with_config.py  mcp_config.example.json  pyproject.toml
src/mcpsh/: main.py
tests/: conftest.py  test_client.py  test_config.py  test_integration_everything.py  test_main.py
