[project]
name = "mcpsh"
version = "0.1.0"
description = "A clean CLI for interacting with MCP servers using FastMCP"
readme = "README.md"
authors = [
    { name = "Foad Kesheh", email = "foad.kesheh@shippo.com" }
]
requires-python = ">=3.13"
dependencies = [
    "fastmcp>=2.12.5",
    "rich>=14.2.0",
    "typer>=0.20.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
]

[project.scripts]
mcpsh = "mcpsh.main:main"

[build-system]
requires = ["uv_build>=0.8.12,<0.9.0"]
build-backend = "uv_build"
